[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=3]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/Otro/fondo.png" type="Texture" id=5]
[ext_resource path="res://Sonidos/inicio.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sonidos/duringGame.mp3" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -7, -4, 0, 0, 0, 0, -8, -2, 0, 0, 0, 0, 631, -2, 0, 0, 0, 0, 632, 956, 0, 0, 0, 0, -8, 956, 0, 0, 0, 0, -7, -4 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 4 )

[node name="Fondo" type="TextureRect" parent="."]
anchor_right = 0.5
margin_top = 5.0
margin_right = 476.0
margin_bottom = 1132.0
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RocaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionDeInicio" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="camino" type="Path2D" parent="."]
position = Vector2( 8, 3 )
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="camino"]
position = Vector2( -7, -4 )
rotation = 0.443874

[node name="Interfaz" parent="." instance=ExtResource( 3 )]

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 6 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
